[package]
name = "ocaml-interop"
version = "0.4.4" # remember to update html_root_url
authors = ["Bruno Deferrari <utizoc@gmail.com>"]
license = "MIT"
description = "Utilities for Rust and OCaml interoperability"
homepage = "http://github.com/simplestaking/ocaml-interop"
repository = "http://github.com/simplestaking/ocaml-interop"
keywords = ["ocaml", "rust", "ffi", "interop"]
edition = "2018"
exclude = [
    ".github/*",
]

[package.metadata.docs.rs]
features = [ "without-ocamlopt" ]

[dependencies]
ocaml-sys = {git = "https://github.com/zshipko/ocaml-rs", version = "0.19.0"}

[features]
without-ocamlopt = ["ocaml-sys/without-ocamlopt"]
